<resources>
    <string name="app_name">MKnews</string>
    <string name="HEADLINES">HEADLINES</string>
    <string name="SPORTS">SPORTS</string>
    <string name="BUSINESS">BUSINESS</string>
    <string name="Setting">Settings</string>
    <string name="Country">Country</string>
    <string name="Language">Language</string>
    <string name="Egypt">Egypt</string>
    <string name="United_Status">United Status</string>
    <string name="Turkey">Turkey</string>
    <string name="France">France</string>
    <string name="United_Arab_Emairates">United Arab Emirates</string>
    <string name="Ukraine">Ukraine</string>
    <string name="United_Kingdom">United Kingdom</string>
    <string name="Search">Search aricles</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>


</resources>