<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".country"
    android:orientation="vertical">


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="60dp"
      android:layout_gravity="center"
      android:layout_margin="5dp"
      android:layout_marginBottom="30dp"
      android:drawableStart="@drawable/ic_baseline_map_24"
      android:drawablePadding="5dp"
      android:gravity="center"
      android:text="@string/Country"
      android:textColor="@color/black"
      android:textSize="30dp" />

  <TextView
      android:id="@+id/egypt"
      android:layout_width="match_parent"
      android:layout_height="55dp"
      android:layout_margin="5dp"
      android:background="@drawable/setting"
      android:clickable="true"
      android:gravity="center_vertical"
      android:paddingStart="20dp"
      android:text="@string/Egypt"
      android:textColor="@color/black"

      android:textSize="20sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/us"
      android:layout_width="match_parent"
      android:layout_height="55dp"
      android:layout_margin="5dp"
      android:background="@drawable/setting"
      android:gravity="center_vertical"
      android:paddingStart="20dp"
      android:text="@string/United_Status"
      android:textColor="@color/black"

      android:textSize="20sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/Turkey"
      android:layout_width="match_parent"
      android:layout_height="55dp"
      android:layout_margin="5dp"
      android:background="@drawable/setting"
      android:gravity="center_vertical"
      android:paddingStart="20dp"
      android:text="@string/Turkey"
      android:textColor="@color/black"

      android:textSize="20sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/France"
      android:layout_width="match_parent"
      android:layout_height="55dp"
      android:layout_margin="5dp"
      android:background="@drawable/setting"
      android:gravity="center_vertical"
      android:paddingStart="20dp"
      android:text="@string/France"
      android:textColor="@color/black"

      android:textSize="20sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/UAE"
      android:layout_width="match_parent"
      android:layout_height="55dp"
      android:layout_margin="5dp"
      android:background="@drawable/setting"
      android:gravity="center_vertical"
      android:paddingStart="20dp"
      android:text="@string/United_Arab_Emairates"
      android:textColor="@color/black"

      android:textSize="20sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/Ukraine"
      android:layout_width="match_parent"
      android:layout_height="55dp"
      android:layout_margin="5dp"
      android:background="@drawable/setting"
      android:gravity="center_vertical"
      android:paddingStart="20dp"
      android:text="@string/Ukraine"
      android:textColor="@color/black"

      android:textSize="20sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/uk"
      android:layout_width="match_parent"
      android:layout_height="55dp"
      android:layout_margin="5dp"
      android:background="@drawable/setting"
      android:gravity="center_vertical"
      android:paddingStart="20dp"
      android:text="@string/United_Kingdom"
      android:textColor="@color/black"

      android:textSize="20sp"
      android:textStyle="bold" />


</LinearLayout>