<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".language"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/Language"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:drawableStart="@drawable/ic_baseline_language_24"
        android:layout_gravity="center"
        android:drawablePadding="5dp"

        />



    <TextView
        android:id="@+id/arabic"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/Arabic"
        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:textStyle="bold"
        android:background="@drawable/setting"
        android:layout_margin="5dp"

        />





    <TextView
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/English"
        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:textStyle="bold"
        android:background="@drawable/setting"
        android:layout_margin="5dp"


        />

</LinearLayout>